# codeblocks_sf

src/: CodeBlocks-unix.cbp  CodeBlocks.cbp  CodeBlocks_wx30-unix.cbp  CodeBlocks_wx30.cbp  CodeBlocks_wx30_64.cbp  CodeBlocks_wx31.cbp  CodeBlocks_wx31_64.cbp
src/include/: cbeditor.h  cbeditorprintout.h  cbplugin.h  cbproject.h  editormanager.h  filefilters.h  manager.h  pluginmanager.h  projectfile.h  projectloader.h  projectmanager.h  scriptingmanager.h  sdk_events.h
src/plugins/classwizard/: Makefile.am  classwizard.cpp  classwizard.h  classwizardconfigdlg.cpp  classwizardconfigdlg.h  classwizarddlg.cpp  classwizarddlg.h
src/plugins/compilergcc/: compilergcc.cpp  compilergcc.h  compileroptionsdlg.cpp  directcommands.cpp  directcommands.h
src/sdk/: cbeditor.cpp  cbeditorprintout.cpp  cbplugin.cpp  cbproject.cpp  compilercommandgenerator.cpp  editormanager.cpp  filefilters.cpp  globals.cpp  manager.cpp  pluginmanager.cpp  projectfile.cpp  projectfileoptionsdlg.cpp  projectloader.cpp  projectmanager.cpp  scriptingmanager.cpp  sdk_events.cpp
src/sdk/scripting/squirrel/: Makefile.am  serialize_state.inl
src/src/: Makefile.am  app.cpp  dlgEditProjectGlob.h  dlgeditprojectglob.cpp  dlgmanageglob.cpp  dlgmanageglob.h  dlgmanageglobs.cpp  dlgmanageglobs.h  editprojectglobsdlg.cpp  editprojectglobsdlg.h  main.cpp  manageglobsdlg.cpp  manageglobsdlg.h  projectmanagerui.cpp  projectmanagerui.h  projectoptionsdlg.cpp  scriptconsole.cpp
src/wxsmith/: dlgeditprojectglob.wxs  dlgmanageglobs.wxs  editprojectglobsdlg.wxs  manageglobsdlg.wxs
(+41 files in other folders)
