AM_CPPFLAGS = -I$(top_srcdir)/src/include/scripting/include \
				-I$(top_srcdir)/src/include/scripting/squirrel

noinst_LTLIBRARIES = libsquirrel.la

libsquirrel_la_SOURCES = sqapi.cpp\
                         sqbaselib.cpp\
                         sqclass.cpp\
                         sqcompiler.cpp\
                         sqdebug.cpp\
                         sqfuncstate.cpp\
                         sqlexer.cpp\
                         sqmem.cpp\
                         sqobject.cpp\
                         sqstate.cpp\
                         sqtable.cpp\
                         sqvm.cpp


EXTRA_DIST = squirrel71.vcproj \
            squirrel.cbp \
            squirrellib.cbp \
            squirrel.vcproj